--- a/git与github.html
+++ b/git与github.html
@@ -5,6 +5,11 @@
 	<title>Document</title>
 </head>
 <body>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
 <script type="text/git">
 	
 	git与github是2个东西
